Resolves: tdf#153924 handle non-numeric and error values in rank array

... of LARGE()/SMALL() instead of yielding error value for all result
elements.

Fallout from

    commit e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
    CommitDate: Fri Nov 30 22:14:17 2018 +0100

        i#32345 Support a matrix of rank argument for LARGE()/SMALL()

that in ScInterpreter::GetTopNumberArray() required the entire
rank array would have to be numeric, which with an empty cell or
string it isn't.

Change-Id: Ieaa1a68bb8f98614119550b1442665b6fbb4817a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148178
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 019e751c71dcb2d34c6fd8bb9dda267c6ba2b48e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148218
Reviewed-by: Caolán McNamara <caolanm@redhat.com>